<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fierst_activivity"
android:layout_gravity="center"
android:background="@color/blue">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="88dp"
        android:text="@string/geometric_calc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/image"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.772" />

    <EditText
        android:textSize="18dp"
        android:textColorHint="@color/gray"
        android:id="@+id/login"
        android:layout_width="373dp"
        android:layout_height="44dp"
        android:layout_marginTop="335dp"
        android:background="@drawable/ramc"
        android:hint="@string/inp_log"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textSize="18dp"
        android:textColorHint="@color/gray"
        android:id="@+id/pass"
        android:layout_width="373dp"
        android:layout_height="44dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/ramc"
        android:hint="@string/inp_pas"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:gravity="center"
        android:id="@+id/Registr"
        android:layout_width="383dp"
        android:layout_height="49dp"
        android:layout_marginTop="516dp"
        android:background="@drawable/button_fon"
        android:text="@string/Regist"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>